# app/Http/Controllers/API/ArticleController.php
@@ -2,12 +2,13 @@
 
 namespace App\Http\Controllers\API;
 
+use App\Exceptions\Problems\ResourceNotFoundException;
 use App\Http\Requests\API\SearchArticleRequest;
 use App\Http\Requests\API\StoreArticleRequest;
 use App\Http\Requests\API\UpdateArticleRequest;
 use App\Models\Article;
 use App\Models\ArticleStatus;
-use App\Services\ArticleManager as ArticleService;
+use App\Services\ArticleManager;
 use App\Http\Resources\Article as ArticleResource;
 use App\Definitions\HttpStatusCode;
 
@@ -23,6 +24,7 @@ class ArticleController extends APIController
     public function index(SearchArticleRequest $request){
         $title = $request->validated()['title'] ?? null;
         $autor = $request->validated()['autor'] ?? null;
+        $status_id = $request->validated()['status_id'] ?? null;
 
         $articles = Article::query();
 
@@ -32,6 +34,9 @@ class ArticleController extends APIController
         if(!empty($autor))
             $articles->where('user_id', $autor);
 
+        if(!empty($status_id))
+            $articles->where('status_id', $status_id);
+
         $articles = ArticleResource::collection($articles->get());
 
         return response()->json($articles, HttpStatusCode::HTTP_OK);
@@ -40,11 +45,16 @@ class ArticleController extends APIController
     /**
      * @GET : api/articles/{id}
      * Affiche la ressource demandée
-     * @param Article $article
+     * @param int $id
      * @return \Illuminate\Http\JsonResponse
+     * @throws ResourceNotFoundException
      */
-    public function show(Article $article)
+    public function show(int $id)
     {
+        $article = Article::find($id);
+        if (empty($article))
+            throw new ResourceNotFoundException('articles');
+
         $article = new ArticleResource($article);
 
         return response()->json($article);
@@ -56,14 +66,14 @@ class ArticleController extends APIController
      * @param StoreArticleRequest $request
      * @return \Illuminate\Http\JsonResponse
      */
-    public function store(StoreArticleRequest $request)
+    public function store(StoreArticleRequest $request, ArticleManager $articleManager)
     {
         $dataValidated = $request->validated();
 
         $dataValidated['publicated_at'] = $dataValidated['publication_date'] ?? null;
         unset($dataValidated['publication_date']);
 
-        $article = new ArticleResource(ArticleService::createArticle($dataValidated));
+        $article = new ArticleResource($articleManager->createArticle($dataValidated));
 
         return response()->json($article, HttpStatusCode::HTTP_CREATED);
     }
@@ -73,16 +83,17 @@ class ArticleController extends APIController
      * Modifie une ressource
      * @param UpdateArticleRequest $request
      * @param Article $article
+     * @param ArticleManager $articleManager
      * @return \Illuminate\Http\JsonResponse
      */
-    public function update(UpdateArticleRequest $request, Article $article)
+    public function update(UpdateArticleRequest $request, Article $article, ArticleManager $articleManager)
     {
         $dataValidated = $request->validated();
 
         $dataValidated['publicated_at'] = $dataValidated['publication_date'] ?? null;
         unset($dataValidated['publication_date']);
 
-        $article = new ArticleResource(ArticleService::updateArticle($dataValidated, $article));
+        $article = new ArticleResource($articleManager->updateArticle($dataValidated, $article));
 
         return response()->json($article, HttpStatusCode::HTTP_OK);
     }
@@ -100,6 +111,6 @@ class ArticleController extends APIController
         $article->status_id = $deletedStatus->id;
         $article->save();
 
-        return response()->json($article, HttpStatusCode::HTTP_OK);
+        return response()->json(new ArticleResource($article), HttpStatusCode::HTTP_OK);
     }
 }
