# app/Http/Requests/API/SearchArticleRequest.php
@@ -2,18 +2,11 @@
 
 namespace App\Http\Requests\API;
 
+use App\Rules\ValidArticleStatus;
+
 class SearchArticleRequest extends ApiRequest
 {
-    /**
-     * Determine if the user is authorized to make this request.
-     *
-     * @return bool
-     */
-    public function authorize()
-    {
-        return true;
-    }
-
+    
     /**
      * Get the validation rules that apply to the request.
      *
@@ -26,7 +19,8 @@ class SearchArticleRequest extends ApiRequest
             'size' => ['sometimes', 'required', 'integer'],
 
             'title' => ['sometimes', 'required', 'string', 'max:128'],
-            'autor' => ['sometimes', 'required', 'string', 'max:64']
+            'autor' => ['sometimes', 'required', 'string', 'max:64'],
+            'status_id' => ['sometimes', 'required', 'integer', new ValidArticleStatus]
         ];
     }
 }
