# app/Http/Requests/API/UpdateArticleRequest.php
@@ -2,20 +2,10 @@
 
 namespace App\Http\Requests\API;
 
-use Illuminate\Foundation\Http\FormRequest;
+use App\Rules\ValidArticleStatus;
 
 class UpdateArticleRequest extends ApiRequest
 {
-    /**
-     * Determine if the user is authorized to make this request.
-     *
-     * @return bool
-     */
-    public function authorize()
-    {
-        return true;
-    }
-
     /**
      * Get the validation rules that apply to the request.
      *
@@ -26,7 +16,7 @@ class UpdateArticleRequest extends ApiRequest
         return [
             'title' => ['sometimes', 'required', 'string', 'max:64'],
             'contents' => ['sometimes', 'required', 'string'],
-            'status_id' => ['sometimes', 'required', 'integer'],
+            'status_id' => ['sometimes', 'required', 'integer', new ValidArticleStatus],
             'publication_date' => ['sometimes', 'required', 'date']
         ];
     }
